plugins {
    id 'java'
}


java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'org.reflections:reflections:0.10.2'
    implementation 'ch.qos.logback:logback-classic:1.5.7'
    implementation 'org.apache.commons:commons-lang3:3.14.0'

    testImplementation 'org.assertj:assertj-core:3.26.0'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.4.2'
}

test {
    useJUnitPlatform()
}
